
[package]
name = "mtproxy-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
hex = "0.4"
rand = "0.8"
local-ip-address = "0.6.3"
futures-util = "0.3"
anyhow = "1.0"
tokio-stream = "0.1"
libc = { version = "0.2.150", features = ["const-extern-fn"] }
